<resources>
    <string name="app_name">COOPNASEJU</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_location_permission">Permiso de ubicacion</string>
    <string name="text_location_permission">Requerimos acceso a la geolocalizacion para poder utilizar esta aplicacion</string>
    <string name="full_name">Cooperativa Nacional de Servicios Múltiples de Servidores Judiciales, Inc.</string>
    <string name="slogan">Mano ayuda a Servidores Judiciales</string>
    <string name="action_access">Acceder</string>
    <string name="forgottenBody">Inserte el correo electronico asociado a su cuenta de la cooperativa, para iniciar el proceso de recuperar contraseña</string>
    <string name="forgottenTitle">Recuperar contraseña</string>
    <string name="continuar">Continuar</string>
    <string name="Email">Email</string>
    <string name="forgotten2Title">Entre el codigo de recuperacion</string>
    <string name="forgotten2Body">Introduzca el codigo de recuperacion que recibio en su correo electronico</string>
    <string name="validar">Validar</string>
    <string name="invalidEmail">Favor introduzca un correo electronico valido</string>
    <string name="forgottenTitle3">Ultimo paso</string>
    <string name="forgottenBody3">Introduzca una nueva contraseña, repita para validar y concluir el proceso</string>
    <string name="newPassword">Nueva Contraseña</string>
    <string name="retype">Una vez mas</string>
    <string name="not_validate">No se ha podido validar, verifique su codigo o intente ota vez</string>
    <string name="not_valid">Condigo de invalido, el codigo debe contener 4 digitos</string>
    <string name="Reestablecer">Reestablecer</string>
    <string name="characters">caracteres</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="done">Listo!</string>
    <string name="pogress_completed">Se ha completado el proceso</string>
    <string name="try_again">Intenta otra vez</string>
    <string name="major_than_8">La contraseña debe ser mayor de 8 caracteres</string>
    <string name="not_equal_passwords">Las contraseñas no coinciden</string>
    <string name="internet_required">La conexion a internet es requerida para usar esta app</string>
    <string name="internetBody">Favor verifique su conexion a Internet y vaya hacia atras para intentar acceder a la aplicacion</string>
    <string name="couldnt_access">Credenciales incorrectas o no validadas</string>
    <string name="access_granted">Acceso concedido</string>
    <string name="forgeturpass">¿Olvidaste tu contraseña?</string>
    <string name="profolio">Portafolio</string>
    <string name="ahorros">Ahorros</string>
    <string name="prestamos">Prestamos</string>
    <string name="sucursales">Sucursales</string>
    <string name="promociones">Promociones</string>
    <string name="credenciales">Credenciales</string>
    <string name="inicio">Inicio</string>
    <string name="calcular">Calcular</string>
    <string name="meses">meses</string>
    <string name="historial">Historial</string>
    <string name="infinito">Infinito</string>
    <string name="info_prestamo">La informacion mostrada es un estimado, puede realizar una solicitud para obtener los valores correctos</string>
    <string name="solicitado">Solicitado</string>
    <string name="pendiente">Pendiente</string>
    <string name="rechazado">Rechazado</string>
    <string name="aprobado">Aprobado</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="more_info_click">Click aqui para mas informacion</string>
    <string name="preguntas">Preguntas</string>
    <string name="remember">Recordar esta cuenta</string>
    <string name="productos">Productos</string>
    <string name="user_profile">Informacion del usuario</string>
    <string name="address">Direccion</string>
    <string name="phone">Telefono</string>
    <string name="update">Actualizar</string>
    <string name="city">Provincia</string>
    <string name="updated_info">La informacion ha sido actualizada</string>
    <string name="okey">Okey</string>
    <string name="or">O</string>
    <string name="conectar">Conectar con</string>
    <string name="gastosMes">Gastos del mes</string>
    <string name="ahorrosMes">Ahorros del mes</string>
    <string name="available">Disponible</string>
    <string name="requested">Solicitado</string>
    <string name="rejected">Rechazado</string>
    <string name="waiting">Pendiente</string>
    <string name="faq">Preguntas Frecuentes</string>
    <string name="searchBar">Buscar…</string>
    <string name="searchBarHint">"  Buscar…"</string>
</resources>