<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/teal_500"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_margin="10dp"
        android:background="@drawable/layout_rounded_white"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/teal_500"
                android:text="@string/forgottenTitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/forgottenBody3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/teal_500"
                android:text="@string/newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etPswForgotten"
                android:layout_marginTop="5dp"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:background="@drawable/rounded_edittext"/>

            <TextView
                android:id="@+id/charCounter1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/teal_500"/>

            <TextView
                android:layout_marginTop="20dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/teal_500"
                android:text="@string/retype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:id="@+id/etRetyoe"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:background="@drawable/rounded_edittext"/>

            <TextView
                android:id="@+id/charCounter2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/teal_500"/>

            <Button
                android:id="@+id/btnRestore"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="@string/Reestablecer"
                android:background="@drawable/rounded_buttom_inverse"
                android:layout_width="200dp"
                android:layout_height="40dp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>