<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        android:background="@drawable/layout_forgotten"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgCloseStep1"
            android:src="@drawable/ic_baseline_close_24"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="32dp"
            android:layout_height="32dp"/>

        <TextView
            android:id="@+id/forgottenTitle"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/forgottenTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:id="@+id/forgottenBody"
            android:layout_below="@id/forgottenTitle"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/forgottenBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_below="@id/forgottenBody"
            android:id="@+id/tvEmail"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etEmailForgotten"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:layout_below="@id/tvEmail"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/rounded_edittext"
            android:hint="johndoe@mail.com"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnContinue"
            android:background="@drawable/rounded_buttom_inverse"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/etEmailForgotten"
            android:textStyle="bold"
            android:text="@string/continuar"
            android:textColor="@color/white"
            android:layout_width="200dp"
            android:layout_height="40dp"/>

    </RelativeLayout>

</RelativeLayout>