<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_height="match_parent">
    <View
        android:id="@+id/vProfileBackground"
        android:background="@color/teal_400"
        android:alpha="0.3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/layout_profile"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgCloseProfile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_baseline_close_24" />

        <TextView
            android:id="@+id/ProfileTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgCloseProfile"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="Juan Jesus Herrera Benitez"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ProfileId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ProfileTitle"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="402-2406386-3"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@id/ProfileId"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/ic_baseline_account_circle" />

        <LinearLayout
            android:id="@+id/lyPIN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgProfilePic"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/address"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etProfileAddress"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:text="C./ Jose Antonio Luna #25"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/city"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etProfileCity"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:text="San Cristobal"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/phone"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etProfilePhone"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:text="+1(829)935-0432"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/Email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etProfileEmail"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:background="@drawable/rounded_edittext"
                android:inputType="text"
                android:text="juanjesus1894@gmail.com"
                android:textAlignment="center" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/conectar"
                android:textAlignment="center"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyConnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lyPIN"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/googleConnect"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/google" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/or" />

            <ImageView
                android:id="@+id/microsoftConnect"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="5dp"
                android:scaleType="fitXY"
                android:src="@drawable/microsoft" />

        </LinearLayout>

        <Button
            android:id="@+id/btnUpdateProfile"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_below="@id/lyConnect"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_buttom_inverse"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>