<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrestamosActivity">

    <FrameLayout
        android:id="@+id/containerPrestamos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer" />

    <LinearLayout
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCalcular"
                android:src="@drawable/ic_baseline_calculate"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/teal_500"
                android:textAlignment="center"
                android:text="@string/calcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgPrestamosHome"
                android:src="@drawable/ic_portafolio"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/teal_500"
                android:textAlignment="center"
                android:text="@string/inicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgHistoryPrestamos"
                android:src="@drawable/ic_baseline_history_24"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/teal_500"
                android:textAlignment="center"
                android:text="@string/historial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>