<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsActivity">

    <fragment
        android:layout_above="@id/footer"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <LinearLayout
        android:id="@+id/footer"
        android:orientation="horizontal"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgMapsPrestamos"
                android:src="@drawable/ic_pagos"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/teal_500"
                android:textAlignment="center"
                android:text="@string/prestamos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgMapsPortafolio"
                android:src="@drawable/ic_portafolio"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/teal_500"
                android:textAlignment="center"
                android:text="@string/profolio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgMapsAhorros"
                android:src="@drawable/ic_ahorros"
                android:layout_width="40dp"
                android:layout_height="40dp"/>

            <TextView
                android:textStyle="bold"
                android:textColor="@color/teal_500"
                android:textAlignment="center"
                android:text="@string/ahorros"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>